--- a/OC/config.plist
+++ b/OC/config.plist
@@ -392,13 +392,6 @@
 				<data>
 				AAAWWQ==
 				</data>
-				<key>AAPL00,override-no-connect</key>
-				<data>
-				AP///////wAGEHycAAAAAAAaAQSlIhNgAm+xp1VMniUM
-				UFQAAAABAQEBAQEBAQEBAQEBAQEBJDaAoHA4H0AwZDUA
-				WMIQAAAZAAAAAAAAAAAAAAAAAAAAAAAAAAAA/gBMRyBE
-				aXNwbGF5CiAgAAAA/gBMUDE1NldGOS1TUEsyAB8=
-				</data>
 				<key>complete-modeset-framebuffers</key>
 				<data>
 				AAAAAAAAAAE=
@@ -1438,7 +1431,7 @@
 				Rg==
 				</data>
 				<key>boot-args</key>
-				<string>brcmfx-country=#a</string>
+				<string>brcmfx-country=#a -v</string>
 				<key>csr-active-config</key>
 				<data>
 				5wMAAA==
@@ -1569,10 +1562,8 @@
 		<key>Drivers</key>
 		<array>
 			<string>HFSPlus.efi</string>
-			<string>AudioDxe.efi</string>
 			<string>OpenCanopy.efi</string>
 			<string>OpenRuntime.efi</string>
-			<string>OpenUsbKbDxe.efi</string>
 		</array>
 		<key>Input</key>
 		<dict>
